--- a/src/html/blocks/modals/contact.html
+++ b/src/html/blocks/modals/contact.html
@@ -3,28 +3,28 @@
     <div class="modal__bgd absolute top-0 left-0 bg-[#031523]/90 w-full h-full z-0">
 
     </div>
-    <div class="modal__content relative z-10 bg-blue-500 md:rounded-[20px]">
-        <div class="modal__cross modal__close absolute -top-10 -right-4 cursor-pointer">
+    <div class="modal__content relative z-10 bg-blue-500 lg:rounded-[20px] h-full lg:h-auto flex items-center justify-center flex-col">
+        <div class="modal__cross modal__close absolute top-2 right-2 lg:-top-10 z-[1] lg:-right-4 cursor-pointer">
             <svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <rect opacity="0.2" x="0.5" y="0.5" width="29" height="29" rx="9.5" stroke="white" />
-                <g opacity="0.5">
+                <rect class="hidden lg:block" opacity="0.2" x="0.5" y="0.5" width="29" height="29" rx="9.5" stroke="white" />
+                <g class="opacity-100 lg:opacity-50">
                     <rect x="8.05469" y="7" width="20.9207" height="1.49433" transform="rotate(45 8.05469 7)"
-                        fill="white" style="fill:white;fill-opacity:1;" />
+                        fill="white"/>
                     <rect x="7" y="21.9434" width="20.9207" height="1.49433" transform="rotate(-45 7 21.9434)"
-                        fill="white" style="fill:white;fill-opacity:1;" />
+                        fill="white"/>
                 </g>
             </svg>
         </div>
-        <div class="content__inner z-10 relative overflow-hidden p-10 h-screen flex flex-col items-center justify-center">
+        <div class="content__inner z-0 relative overflow-hidden p-5 lg:p-10 max-w-[600px]">
 
-            <div class="absolute right-[-34px] top-5 z-0">
+            <div class="absolute right-[-34px] -top-5 lg:top-5 z-0">
                 <img src="./img/icons/vector-logo.svg" class="w-[68px]" alt="vector-logo">
             </div>
-            <div class="absolute left-[-34px] bottom-[154px] z-0">
+            <div class="absolute left-[-34px] bottom-0 lg:bottom-[154px] z-0">
                 <img src="./img/icons/vector-logo.svg" class="w-[68px]" alt="vector-logo">
             </div>
 
-            <img src="../../../img/modals/modal-banner.jpg" class="w-[calc(100%_+_80px)] max-w-none mb-auto" alt="ph">
+            <img src="../../../img/modals/modal-banner.jpg" class="w-[calc(100%_+_80px)] ml-[-40px] lg:mt-[-40px] lg:rounded-t-[20px] lg:mb-[40px] max-w-none mb-auto" alt="ph">
 
             <h2 class="text-white text-lg md:text-2xl font-bold text-center mb-5 ">
                 Оставьте контакт, чтобы получить презентацию по нашим проектам
@@ -33,16 +33,18 @@
             <form action=""
                 class="flex w-full flex-col text-center">
                 
-                <div class="flex flex-col md:flex-row gap-2 lg:gap-5">
+                <div class="flex flex-col">
                     <input id="phone-index" type="tel"
                         class="bg-whiteOp-200 rounded-xl text-white text-sm px-5 py-4 outline-none lg:p-6 lg:text-base w-full">
-                    <button type="submit"
-                        class="white-button w-full">
-                        Отправить заявку
+                    <button type="submit" class="white-button w-full mt-5 lg:leading-[120%] lg:py-5 leading-[90%]">
+                        Получить презентацию
                     </button>
+
+                    <p class="text-center text-white text-xs lg:text-sm w-full mt-5">Нажимая на кнопку “Отправить резюме”, вы соглашаетесь с нашей <a href="#" class="text-blue-400 font-bold underline transition-all hover:text-blue-700">Политикой конфиденциальности</a></p>
+
                 </div>
             </form>
-            
+
         </div>
     </div>
 </div>
